k8s/create-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: create-microservice-deployment
  namespace: movies-app
  labels:
    app: create-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: create-microservice
  template:
    metadata:
      labels:
        app: create-microservice
    spec:
      containers:
      - name: create-microservice
        image: vargascardona/k8s-capstone-create:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
