k8s/delete-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-microservice-deployment
  namespace: movies-app
  labels:
    app: delete-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delete-microservice
  template:
    metadata:
      labels:
        app: delete-microservice
    spec:
      containers:
      - name: delete-microservice
        image: vargascardona/k8s-capstone-delete:latest
        ports:
        - containerPort: 5003
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
