k8s/read-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: read-microservice-deployment
  namespace: movies-app
  labels:
    app: read-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: read-microservice
  template:
    metadata:
      labels:
        app: read-microservice
    spec:
      containers:
      - name: read-microservice
        image: vargascardona/k8s-capstone-read:latest
        ports:
        - containerPort: 5001
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
