k8s/update-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update-microservice-deployment
  namespace: movies-app
  labels:
    app: update-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: update-microservice
  template:
    metadata:
      labels:
        app: update-microservice
    spec:
      containers:
      - name: update-microservice
        image: vargascardona/k8s-capstone-update:latest
        ports:
        - containerPort: 5002
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
