k8s/delete-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delete-microservice-service
  namespace: movies-app
spec:
  selector:
    app: delete-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
  type: ClusterIP
