k8s/update-microservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: update-microservice-service
  namespace: movies-app
spec:
  selector:
    app: update-microservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
  type: ClusterIP
